--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+appdirs==1.4.3
 asgiref==3.2.3
 astroid==2.3.3
+attrs==19.3.0
+black==19.3b0
+Click==7.0
 colorama==0.4.1
 Django==3.0
 djangorestframework==3.10.3
@@ -10,4 +14,6 @@ pylint==2.4.4
 pytz==2019.3
 six==1.13.0
 sqlparse==0.3.0
+toml==0.10.0
+typed-ast==1.4.0
 wrapt==1.11.2
