--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ djangorestframework = "^3.10"
 [tool.poetry.dev-dependencies]
 pylint = "^2.4"
 black = {version = "19.3b0", allows-prereleases = true}
+pytest = "^5.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
