--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -18,6 +18,6 @@ jobs:
           pip install pipenv
           pipenv install --deploy --system --dev
       - name: Pylint
-        run: pylint shared_bills bills_app
+        run: pylint shared_bills bills
       - name: Black
         run: black --check ./
