--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,10 +1,11 @@
 -i https://pypi.org/simple
 appdirs==1.4.3
 astroid==2.3.3
+atomicwrites==1.3.0 ; sys_platform == 'win32'
 attrs==19.3.0
 black==19.3b0
 click==7.0
-importlib-metadata==1.2.0 ; python_version < '3.8'
+colorama==0.4.3 ; sys_platform == 'win32'
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
@@ -17,7 +18,5 @@ pyparsing==2.4.5
 pytest==5.3.1
 six==1.13.0
 toml==0.10.0
-typed-ast==1.4.0 ; implementation_name == 'cpython' and python_version < '3.8'
 wcwidth==0.1.7
 wrapt==1.11.2
-zipp==0.6.0
