Basic endpoinds done

--- a/.pylintrc
+++ b/.pylintrc
@@ -251,7 +251,8 @@ good-names=i,
            _,
            app_name,
            urlpatterns,
-           application
+           application,
+           router
 
 # Include a hint for the correct naming format with invalid-name.
 include-naming-hint=no
