--- a/Pipfile
+++ b/Pipfile
@@ -33,6 +33,7 @@ py-moneyed = "==0.8.0"
 pytz = "==2019.3"
 sqlparse = "==0.3.0"
 Django = "==3.0"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.8"
