--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,11 +1,11 @@
 -i https://pypi.org/simple
 appdirs==1.4.3
 astroid==2.3.3
-atomicwrites==1.3.0 ; sys_platform == 'win32'
+atomicwrites==1.3.0
 attrs==19.3.0
 black==19.3b0
 click==7.0
-colorama==0.4.3 ; sys_platform == 'win32'
+colorama==0.4.3
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
