--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,6 +6,7 @@ attrs==19.3.0
 black==19.3b0
 click==7.0
 colorama==0.4.3
+coverage==5.0
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
@@ -15,6 +16,7 @@ pluggy==0.13.1
 py==1.8.0
 pylint==2.4.4
 pyparsing==2.4.5
+pytest-django==3.7.0
 pytest==5.3.1
 six==1.13.0
 toml==0.10.0
