--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -1,6 +1,6 @@
 name: Python application
 
-on: [pull_request]
+on: [pull_request, push]
 
 jobs:
   build:
@@ -21,3 +21,5 @@ jobs:
         run: pylint shared_bills bills
       - name: Black
         run: black --check ./
+      - name: Pytest
+        run: pytest
