SECRET_KEY exported

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -17,6 +17,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install pipenv
           pipenv install --deploy --system --dev
+      - name: Set SECRET_KEY
+        run: export SECRET_KEY="dummy"
       - name: Pylint
         run: pylint shared_bills bills
       - name: Black
