--- a/.coveragerc
+++ b/.coveragerc
@@ -2,11 +2,12 @@
 source=
     .
 omit =
-    */__init__.py
-    */manage.py
-    */tests/*
-    */migrations/*
-    shared_bills/asgi.py
-    shared_bills/settings.py
-    shared_bills/wsgi.py
+    */__init__.py,
+    */manage.py,
+    */tests/*,
+    */migrations/*,
+    bills/apps.py,
+    shared_bills/asgi.py,
+    shared_bills/settings.py,
+    shared_bills/wsgi.py,
 
