Accounts application created, added user model related to Participant model from bills app.

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -18,7 +18,7 @@ jobs:
           pip install pipenv
           pipenv install --deploy --system --dev
       - name: Pylint
-        run: pylint shared_bills bills
+        run: pylint shared_bills bills accounts
       - name: Black
         run: black --check ./
       - name: Pytest
