--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ attrs = "==19.3.0"
 black = "==19.3b0"
 click = "==7.0"
 colorama = "==0.4.3"
+coverage = "==5.0"
 isort = "==4.3.21"
 lazy-object-proxy = "==1.4.3"
 mccabe = "==0.6.1"
@@ -19,24 +20,24 @@ pluggy = "==0.13.1"
 py = "==1.8.0"
 pylint = "==2.4.4"
 pyparsing = "==2.4.5"
+pytest-django = "==3.7.0"
 pytest = "==5.3.1"
 six = "==1.13.0"
 toml = "==0.10.0"
 wcwidth = "==0.1.7"
 wrapt = "==1.11.2"
-coverage = "==5.0"
-pytest-django = "==3.7.0"
 
 [packages]
 asgiref = "==3.2.3"
 django-cors-headers = "==3.2.0"
 django-money = "==1.0"
 djangorestframework = "==3.10.3"
+drf-nested-routers = "==0.91"
 py-moneyed = "==0.8.0"
 pytz = "==2019.3"
 sqlparse = "==0.3.0"
 Django = "==3.0"
-drf-nested-routers = "==0.91"
+djangorestframework-simplejwt = "*"
 
 [requires]
 python_version = "3.8"
