--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "@types/react": "^16.9.22",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-swipeable-views": "^0.13.0",
     "@types/url-join": "^4.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-swipeable-views": "^0.13.9",
     "rxjs": "^6.5.4",
     "typescript": "^3.7.5",
     "url-join": "^4.0.1"
